WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189890
[ARM] Building FELightingNEON.cpp fails due to missing lightVector member
https://bugs.webkit.org/show_bug.cgi?id=189890
Summary
[ARM] Building FELightingNEON.cpp fails due to missing lightVector member
Adrian Perez
Reported
2018-09-22 15:58:17 PDT
SSIA. Compiler output (GCC 7) follows. --- [ 53%] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unified-sources/UnifiedSource319.cpp.o In file included from /home/aperez/buildroot/output-wkgtk-rpi/build/webkitgtk-2.22.2/Source/WebCore/platform/graphics/cpu/arm/filters/FELightingNEON.cpp:28:0, from /home/aperez/buildroot/output-wkgtk-rpi/build/webkitgtk-2.22.2/DerivedSources/WebCore/unified-sources/UnifiedSource319.cpp:5: /home/aperez/buildroot/output-wkgtk-rpi/build/webkitgtk-2.22.2/Source/WebCore/platform/graphics/cpu/arm/filters/FELightingNEON.h: In member function ‘void WebCore::FELighting::platformApplyNeon(const WebCore::FELighting::LightingData&, const WebCore::LightSource::PaintingData&)’: /home/aperez/buildroot/output-wkgtk-rpi/build/webkitgtk-2.22.2/Source/WebCore/platform/graphics/cpu/arm/filters/FELightingNEON.h:147:46: error: ‘const struct WebCore::LightSource::PaintingData’ has no member named ‘lightVector’; did you mean ‘directionVector’? floatArguments.lightX = paintingData.lightVector.x(); ^~~~~~~~~~~ directionVector /home/aperez/buildroot/output-wkgtk-rpi/build/webkitgtk-2.22.2/Source/WebCore/platform/graphics/cpu/arm/filters/FELightingNEON.h:148:46: error: ‘const struct WebCore::LightSource::PaintingData’ has no member named ‘lightVector’; did you mean ‘directionVector’? floatArguments.lightY = paintingData.lightVector.y(); ^~~~~~~~~~~ directionVector /home/aperez/buildroot/output-wkgtk-rpi/build/webkitgtk-2.22.2/Source/WebCore/platform/graphics/cpu/arm/filters/FELightingNEON.h:149:46: error: ‘const struct WebCore::LightSource::PaintingData’ has no member named ‘lightVector’; did you mean ‘directionVector’? floatArguments.lightZ = paintingData.lightVector.z(); ^~~~~~~~~~~ directionVector
Attachments
Patch
(1.88 KB, patch)
2018-09-22 16:25 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2018-09-22 16:00:23 PDT
For the record, this was trying to build WebKitGTK+ 2.22.2, but I am quite certain that the issue affects also WPE and is definitely not fixed in “trunk”.
Adrian Perez
Comment 2
2018-09-22 16:21:50 PDT
This seems to have been broken by
r225122
(
bug #179933
), which changed the layout of struct PaintaingData.
Adrian Perez
Comment 3
2018-09-22 16:25:02 PDT
Created
attachment 350537
[details]
Patch
Adrian Perez
Comment 4
2018-09-22 16:30:02 PDT
I would appreciate if Simon Fraser (who wrote the patch in
bug #179933
) and/or Darin Adler (who reviewed it) could take a look at my patch before landing it (thanks in advance!)
WebKit Commit Bot
Comment 5
2018-09-22 21:22:56 PDT
Comment on
attachment 350537
[details]
Patch Clearing flags on attachment: 350537 Committed
r236391
: <
https://trac.webkit.org/changeset/236391
>
WebKit Commit Bot
Comment 6
2018-09-22 21:22:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-09-22 21:23:18 PDT
<
rdar://problem/44710038
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug