[ARM] Building FELightingNEON.cpp fails due to missing lightVector member https://bugs.webkit.org/show_bug.cgi?id=189890

Reviewed by Darin Adler.

No new tests needed.

* platform/graphics/cpu/arm/filters/FELightingNEON.h:
(WebCore::FELighting::platformApplyNeon): Adapt to new layout of "struct PaintingData" after r225122.


Canonical link: https://commits.webkit.org/204844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236391 268f45cc-cd09-0410-ab3c-d52691b4dbfc